visual touch up

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4159,7 +4159,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default {
-  background-color: #732ca5;
+  background-color: #65407e;
   border-color: transparent;
 }
 .navbar-default .navbar-brand {
