--- a/css/bootstrap-custom.css
+++ b/css/bootstrap-custom.css
@@ -1,6 +1,12 @@
 body { 
   padding-top: 70px; 
+  background-color: #221e29;
 }
+
+.well {
+  background-color: #302e30;
+}
+
 .btn-google {
   color: #ffffff;
   background-color: #DD4B39;
@@ -42,10 +48,7 @@ fieldset[disabled] .btn-google.active {
   background-color: #DD4B39;
   border-color: #DD4B39;
 }
-.btn-google .badge {
-  color: #DD4B39;
-  background-color: #ffffff;
-}
+
 .btn-twitter {
   color: #ffffff;
   background-color: #5EA9DD;
@@ -87,10 +90,7 @@ fieldset[disabled] .btn-twitter.active {
   background-color: #5EA9DD;
   border-color: #5EA9DD;
 }
-.btn-twitter .badge {
-  color: #5EA9DD;
-  background-color: #ffffff;
-}
+
 .btn-linkedin {
   color: #ffffff;
   background-color: #1C87BD;
@@ -132,14 +132,11 @@ fieldset[disabled] .btn-linkedin.active {
   background-color: #1C87BD;
   border-color: #1C87BD;
 }
-.btn-linkedin .badge {
-  color: #1C87BD;
-  background-color: #ffffff;
-}
+
 .btn-steam {
   color: #ffffff;
-  background-color: #171A21;
-  border-color: #171A21;
+  background-color: #5a5445;
+  border-color: #5a5445;
 }
 .btn-steam:hover,
 .btn-steam:focus,
@@ -148,8 +145,8 @@ fieldset[disabled] .btn-linkedin.active {
 .btn-steam.active,
 .open > .dropdown-toggle.btn-steam {
   color: #ffffff;
-  background-color: #08080b;
-  border-color: #08080b;
+  background-color: #514c3f;
+  border-color: #514c3f;
 }
 .btn-steam:active,
 .btn-steam.active,
@@ -174,18 +171,14 @@ fieldset[disabled] .btn-steam:active,
 .btn-steam.disabled.active,
 .btn-steam[disabled].active,
 fieldset[disabled] .btn-steam.active {
-  background-color: #171A21;
-  border-color: #171A21;
-}
-.btn-steam .badge {
-  color: #171A21;
-  background-color: #ffffff;
+  background-color: #5a5445;
+  border-color: #5a5445;
 }
 
 .btn-github {
-  color: #ffffff;
-  background-color: #171A21;
-  border-color: #171A21;
+  color: #000000;
+  background-color: #EAEAEA;
+  border-color: #EAEAEA;
 }
 .btn-github:hover,
 .btn-github:focus,
@@ -193,9 +186,9 @@ fieldset[disabled] .btn-steam.active {
 .btn-github:active,
 .btn-github.active,
 .open > .dropdown-toggle.btn-github {
-  color: #ffffff;
-  background-color: #08080b;
-  border-color: #08080b;
+  color: #000000;
+  background-color: #d0d0d0;
+  border-color: #d0d0d0;
 }
 .btn-github:active,
 .btn-github.active,
@@ -220,10 +213,6 @@ fieldset[disabled] .btn-github:active,
 .btn-github.disabled.active,
 .btn-github[disabled].active,
 fieldset[disabled] .btn-github.active {
-  background-color: #171A21;
-  border-color: #171A21;
-}
-.btn-github .badge {
-  color: #171A21;
-  background-color: #ffffff;
+  background-color: #EAEAEA;
+  border-color: #EAEAEA;
 }
