--- a/css/bootstrap-custom.css
+++ b/css/bootstrap-custom.css
@@ -1,12 +1,44 @@
+/* support custom footer positioning */
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+/* pad out the nav bars */
 body { 
   padding-top: 70px; 
+  padding-bottom: 60px;
+  /* custom colors*/
   background-color: #221e29;
 }
 
-.well {
+/* custom colors */
+.well, .well .jumbotron {
   background-color: #302e30;
 }
 
+/* sticky footer */
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  background-color: #322039;
+}
+
+.footer .container {
+  padding-top: 20px;
+}
+
+.footer .text-muted {
+  color: #957995; 
+}
+
+.footer a {
+  color: #322039; 
+}
+
+/* custom button colors */
 .btn-google {
   color: #ffffff;
   background-color: #DD4B39;
