--- a/css/bootstrap-custom.css
+++ b/css/bootstrap-custom.css
@@ -1,298 +1,40 @@
 /* support custom footer positioning */
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 /* pad out the nav bars */
 body {
-  padding-top: 70px;
-  padding-bottom: 60px;
-  /* custom colors*/
-  background-color: #221e29;
+    padding-top: 70px;
+    padding-bottom: 60px;
+    /* custom colors*/
+    background-color: #221e29;
 }
 
 /* custom colors */
-.well, .well .jumbotron {
-  background-color: #302e30;
+.well,
+.well .jumbotron {
+    background-color: #302e30;
 }
 
 /* sticky footer */
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  background-color: #322039;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #322039;
 }
 
 .footer .container {
-  padding-top: 20px;
+    padding-top: 20px;
 }
 
 .footer .text-muted {
-  color: #957995;
+    color: #957995;
 }
 
 .footer a {
-  color: #322039;
-}
-
-/* custom button colors */
-.btn {
-  margin: 5px;
-  font-weight: bold;
-}
-
-/* Google */
-.btn-gg {
-  color: #ffffff;
-  background-color: #dd4b39;
-  border-color: #dd4b39;
-}
-.btn-gg:hover,
-.btn-gg:focus,
-.btn-gg.focus,
-.btn-gg:active,
-.btn-gg.active,
-.open > .dropdown-toggle.btn-gg {
-  background-color: #cc4939;
-  border-color: #cc4939;
-}
-.btn-gg:active,
-.btn-gg.active,
-.open > .dropdown-toggle.btn-gg {
-  background-image: none;
-}
-.btn-gg.disabled,
-.btn-gg[disabled],
-fieldset[disabled] .btn-gg,
-.btn-gg.disabled:hover,
-.btn-gg[disabled]:hover,
-fieldset[disabled] .btn-gg:hover,
-.btn-gg.disabled:focus,
-.btn-gg[disabled]:focus,
-fieldset[disabled] .btn-gg:focus,
-.btn-gg.disabled.focus,
-.btn-gg[disabled].focus,
-fieldset[disabled] .btn-gg.focus,
-.btn-gg.disabled:active,
-.btn-gg[disabled]:active,
-fieldset[disabled] .btn-gg:active,
-.btn-gg.disabled.active,
-.btn-gg[disabled].active,
-fieldset[disabled] .btn-gg.active {
-  background-color: #dd4b39;
-  border-color: #dd4b39;
-}
-
-/* Twitter */
-.btn-t {
-  color: #ffffff;
-  background-color: #5ea9dd;
-  border-color: #5ea9dd;
-}
-.btn-t:hover,
-.btn-t:focus,
-.btn-t.focus,
-.btn-t:active,
-.btn-t.active,
-.open > .dropdown-toggle.btn-t {
-  background-color: #5f91b4;
-  border-color: #5f91b4;
-}
-.btn-t:active,
-.btn-t.active,
-.open > .dropdown-toggle.btn-t {
-  background-image: none;
-}
-.btn-t.disabled,
-.btn-t[disabled],
-fieldset[disabled] .btn-t,
-.btn-t.disabled:hover,
-.btn-t[disabled]:hover,
-fieldset[disabled] .btn-t:hover,
-.btn-t.disabled:focus,
-.btn-t[disabled]:focus,
-fieldset[disabled] .btn-t:focus,
-.btn-t.disabled.focus,
-.btn-t[disabled].focus,
-fieldset[disabled] .btn-t.focus,
-.btn-t.disabled:active,
-.btn-t[disabled]:active,
-fieldset[disabled] .btn-t:active,
-.btn-t.disabled.active,
-.btn-t[disabled].active,
-fieldset[disabled] .btn-t.active {
-  background-color: #5ea9dd;
-  border-color: #5ea9dd;
-}
-
-/* LinkedIn */
-.btn-li {
-  color: #ffffff;
-  background-color: #1c87bd;
-  border-color: #1c87bd;
-}
-.btn-li:hover,
-.btn-li:focus,
-.btn-li.focus,
-.btn-li:active,
-.btn-li.active,
-.open > .dropdown-toggle.btn-li {
-  background-color: #217dbb;
-  border-color: #2077b2;
-}
-.btn-li:active,
-.btn-li.active,
-.open > .dropdown-toggle.btn-li {
-  background-image: none;
-}
-.btn-li.disabled,
-.btn-li[disabled],
-fieldset[disabled] .btn-li,
-.btn-li.disabled:hover,
-.btn-li[disabled]:hover,
-fieldset[disabled] .btn-li:hover,
-.btn-li.disabled:focus,
-.btn-li[disabled]:focus,
-fieldset[disabled] .btn-li:focus,
-.btn-li.disabled.focus,
-.btn-li[disabled].focus,
-fieldset[disabled] .btn-li.focus,
-.btn-li.disabled:active,
-.btn-li[disabled]:active,
-fieldset[disabled] .btn-li:active,
-.btn-li.disabled.active,
-.btn-li[disabled].active,
-fieldset[disabled] .btn-li.active {
-  background-color: #1c87bd;
-  border-color: #1c87bd;
-}
-
-/* Steam */
-.btn-st {
-  color: #ffffff;
-  background-color: #5a5445;
-  border-color: #5a5445;
-}
-.btn-st:hover,
-.btn-st:focus,
-.btn-st.focus,
-.btn-st:active,
-.btn-st.active,
-.open > .dropdown-toggle.btn-st {
-  background-color: #514c3f;
-  border-color: #514c3f;
-}
-.btn-st:active,
-.btn-st.active,
-.open > .dropdown-toggle.btn-st {
-  background-image: none;
-}
-.btn-st.disabled,
-.btn-st[disabled],
-fieldset[disabled] .btn-st,
-.btn-st.disabled:hover,
-.btn-st[disabled]:hover,
-fieldset[disabled] .btn-st:hover,
-.btn-st.disabled:focus,
-.btn-st[disabled]:focus,
-fieldset[disabled] .btn-st:focus,
-.btn-st.disabled.focus,
-.btn-st[disabled].focus,
-fieldset[disabled] .btn-st.focus,
-.btn-st.disabled:active,
-.btn-st[disabled]:active,
-fieldset[disabled] .btn-st:active,
-.btn-st.disabled.active,
-.btn-st[disabled].active,
-fieldset[disabled] .btn-st.active {
-  background-color: #5a5445;
-  border-color: #5a5445;
-}
-
-/* GitHub */
-.btn-gh {
-  color: #000000;
-  background-color: #eaeaea;
-  border-color: #eaeaea;
-}
-.btn-gh:hover,
-.btn-gh:focus,
-.btn-gh.focus,
-.btn-gh:active,
-.btn-gh.active,
-.open > .dropdown-toggle.btn-gh {
-  color: #000000;
-  background-color: #d0d0d0;
-  border-color: #d0d0d0;
-}
-.btn-gh:active,
-.btn-gh.active,
-.open > .dropdown-toggle.btn-gh {
-  background-image: none;
-}
-.btn-gh.disabled,
-.btn-gh[disabled],
-fieldset[disabled] .btn-gh,
-.btn-gh.disabled:hover,
-.btn-gh[disabled]:hover,
-fieldset[disabled] .btn-gh:hover,
-.btn-gh.disabled:focus,
-.btn-gh[disabled]:focus,
-fieldset[disabled] .btn-gh:focus,
-.btn-gh.disabled.focus,
-.btn-gh[disabled].focus,
-fieldset[disabled] .btn-gh.focus,
-.btn-gh.disabled:active,
-.btn-gh[disabled]:active,
-fieldset[disabled] .btn-gh:active,
-.btn-gh.disabled.active,
-.btn-gh[disabled].active,
-fieldset[disabled] .btn-gh.active {
-  background-color: #eaeaea;
-  border-color: #eaeaea;
-}
-
-/* Telegram */
-.btn-tl {
-  color: #ffffff;
-  background-color: #2ca5e0;
-  border-color: #2ca5e0;
-}
-.btn-tl:hover,
-.btn-tl:focus,
-.btn-tl.focus,
-.btn-tl:active,
-.btn-tl.active,
-.open > .dropdown-toggle.btn-tl {
-  background-color: #2794c9;
-  border-color: #2794c9;
-}
-.btn-tl:active,
-.btn-tl.active,
-.open > .dropdown-toggle.btn-tl {
-  background-image: none;
-}
-.btn-tl.disabled,
-.btn-tl[disabled],
-fieldset[disabled] .btn-tl,
-.btn-tl.disabled:hover,
-.btn-tl[disabled]:hover,
-fieldset[disabled] .btn-tl:hover,
-.btn-tl.disabled:focus,
-.btn-tl[disabled]:focus,
-fieldset[disabled] .btn-tl:focus,
-.btn-tl.disabled.focus,
-.btn-tl[disabled].focus,
-fieldset[disabled] .btn-tl.focus,
-.btn-tl.disabled:active,
-.btn-tl[disabled]:active,
-fieldset[disabled] .btn-tl:active,
-.btn-tl.disabled.active,
-.btn-tl[disabled].active,
-fieldset[disabled] .btn-tl.active {
-  background-color: #2ca5e0;
-  border-color: #2ca5e0;
+    color: #322039;
 }
