--- a/css/bootstrap-custom.css
+++ b/css/bootstrap-custom.css
@@ -8,6 +8,7 @@ html {
 body {
     padding-top: 70px;
     padding-bottom: 60px;
+    font-size: 14pt;
     /* custom colors*/
     background-color: #221e29;
 }
